# mkseed

./: .gitignore  .travis.yml  NEWS.md  README.md  appveyor.yml
src/: CMakeLists.txt
src/mkseed/: CMakeLists.txt
src/mkseed/apps/: CMakeLists.txt
src/mkseed/apps/find_seed/: CMakeLists.txt  find_seed.cpp
src/mkseed/lib/mkseed/: CMakeLists.txt  mkseed_core.cpp
src/mkseed/lib/mkseed/include/: mkseed_core.hpp
src/seqan/core/include/seqan/: system.h
src/seqan/core/include/seqan/arg_parse/: argument_parser.h
src/seqan/core/include/seqan/bam_io/: bam_sam_conversion.h
src/seqan/core/include/seqan/graph_align/: graph_algorithm_refine_align.h  graph_algorithm_refine_exact_iterative.h  graph_algorithm_refine_fragment.h
src/seqan/core/include/seqan/misc/: priority_type_heap.h
src/seqan/core/include/seqan/platform/: platform_windows.h
src/seqan/core/include/seqan/sequence/: string_packed.h
src/seqan/core/include/seqan/system/: system_sema.h
src/seqan/util/cmake/: FindSeqAn.cmake  SeqAnBuildSystem.cmake
src/test/: CMakeLists.txt
src/test/data/: mir_001.txt  mir_002.fa  test_ds1.txt  test_ds10.txt  test_ds2.txt  test_ds3.txt  test_ds4.txt  test_ds6.txt  test_ds8.txt  test_ds9.txt  test_mature_1.fa  test_output_1.txt  test_output_10.txt  test_output_2.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_9.txt  test_refseq_1.fa  utr1.txt  utr3.txt  utr3_002.txt  utr3_005.txt  utr3_006.txt  utr3_007.txt  utr3_008.txt  utr3_009.txt  utr3_010.txt  utr3_011.fa  utr4.txt
src/test/findseed/: CMakeLists.txt  basic_check.cpp  mi_001.cpp  read_fasta.cpp  test_ds1.cpp  test_ds2.cpp  test_ds3.cpp  test_ds4.cpp  test_ds5.cpp  test_ds5a.cpp  test_ds6.cpp  test_ds7.cpp  test_ds8.cpp  test_ds9.cpp  u3_001.cpp  u3_002.cpp  u3_003.cpp  u3_004.cpp  u3_005.cpp  u3_006.cpp  u3_007.cpp  u3_008.cpp  u3_009.cpp  u3_010.cpp  u3_011.cpp
src/test/include/: basic_check.hpp  get_data_path.hpp  test_ds.hpp
src/test/lib/googletest/: CMakeLists.txt
src/test/lib/googletest/test/: gtest_unittest.cc
